# RPD-7SK-Pick-and-Place

./: .gitignore
src/: README.md
src/moveit_7sk/: CMakeLists.txt  README.md  code.txt  package.xml
src/moveit_7sk/config/: params.yaml
src/moveit_7sk/launch/launch/: moveit_7sk.launch.py
src/moveit_7sk/src/: moveit_7sk_node.cpp
src/moveit_7sk/srv/: AddNamedPose.srv  GoToNamedPose.srv  GoToPose.srv
src/mover/: README.md  package.xml  setup.py
src/mover/mover/: client.py  sequence.py  test.py
src/msgs_pkg/: CMakeLists.txt  README.md  package.xml
src/msgs_pkg/msg/: Detection.msg  DetectionArray.msg  MotionStep.msg  Pose.msg
src/realsense_camera_pkg/: README.md  package.xml  setup.py
src/realsense_camera_pkg/models/: Box.stl  blue_box.sdf  blue_cube.sdf  d435i.sdf  red_box.sdf  red_cube.sdf
src/realsense_camera_pkg/realsense_camera_pkg/: cam.py  camera_sim.py  cube_spawner.py  spawn.py
src/rpd_manipulator_7sk/: README.md
src/rpd_manipulator_7sk/rpd_manipulator_7sk/: CMakeLists.txt  package.xml
src/rpd_manipulator_7sk/rpd_manipulator_7sk_bringup/: CMakeLists.txt  package.xml
src/rpd_manipulator_7sk/rpd_manipulator_7sk_bringup/config/: gazebo_bridge_config.yaml  rpd_manipulator_7sk_controllers.yaml
src/rpd_manipulator_7sk/rpd_manipulator_7sk_bringup/launch/: rpd_manipulator_7sk.launch.py
src/rpd_manipulator_7sk/rpd_manipulator_7sk_description/: CMakeLists.txt  package.xml
src/rpd_manipulator_7sk/rpd_manipulator_7sk_description/config/: ee.yaml  joints.yaml  links.yaml
src/rpd_manipulator_7sk/rpd_manipulator_7sk_description/launch/: rpd_manipulator_7sk_display.launch.py
src/rpd_manipulator_7sk/rpd_manipulator_7sk_description/meshes/: base_link.stl  gripper_base_link.stl  gripper_left_link.stl  gripper_right_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl
src/rpd_manipulator_7sk/rpd_manipulator_7sk_description/rviz/: rpd_manipulator_7sk.rviz
src/rpd_manipulator_7sk/rpd_manipulator_7sk_description/urdf/: rpd_manipulator_7sk.urdf.xacro  rpd_manipulator_7sk_gazebo.xacro  rpd_manipulator_7sk_robot.urdf.xacro  rpd_manipulator_7sk_ros2_control.xacro
src/rpd_manipulator_7sk/rpd_manipulator_7sk_hardware/: CMakeLists.txt  package.xml  rpd_manipulator_7sk_hardware.xml
src/rpd_manipulator_7sk/rpd_manipulator_7sk_hardware/include/rpd_manipulator_7sk_hardware/: rpd_manipulator_7sk_hardware.hpp
src/rpd_manipulator_7sk/rpd_manipulator_7sk_hardware/src/: rpd_manipulator_7sk_hardware.cpp
src/rpd_manipulator_7sk/rpd_manipulator_7sk_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/rpd_manipulator_7sk/rpd_manipulator_7sk_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  rpd_manipulator_7sk.srdf
src/rpd_manipulator_7sk/rpd_manipulator_7sk_moveit_config/launch/: rpd_manipulator_7sk_moveit.launch.py
src/segmenta/: README.md  package.xml  req.txt  setup.cfg  setup.py
src/segmenta/segmenta/: cam_sim.py  model.py  node.py  sim.py  transform.py  transform_sim.py
src/st_sc_servo_control_lib/: CMakeLists.txt  README.md  package.xml
src/st_sc_servo_control_lib/include/st_sc_servo_control_lib/: INST.h  SCS.h  SCSCL.h  SCSerial.h  SCServo.h  SMSBL.h  SMSCL.h  SMS_STS.h
src/st_sc_servo_control_lib/src/: SCS.cpp  SCSCL.cpp  SCSerial.cpp  SMSBL.cpp  SMSCL.cpp  SMS_STS.cpp
