<?xml version="1.0"?>
<package format="3">
  <name>mover</name>
  <version>0.0.1</version>
  <description>Python sequence runner for moveit_7sk</description>
  <maintainer email="pavan@todo.com">pavan</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>moveit_7sk</depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>