<?xml version="1.0"?>
<package format="3">
  <name>msgs_pkg</name>
  <version>0.0.0</version>
  <description>Custom messages</description>

  <maintainer email="pavan@todo.todo">pavan</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Dependencies -->
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

</package>