<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpd_manipulator_7sk</name>
  <version>0.0.0</version>
  <description>meta package for RPD Manipulator 7SK</description>
  <maintainer email="srichatur24@kmit.edu.in">Srichatur</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rpd_manipulator_7sk_description</depend>
  <depend>rpd_manipulator_7sk_bringup</depend>
  <depend>rpd_manipulator_7sk_moveit_config</depend>
  <depend>rpd_manipulator_7sk_hardware</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
